--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   <title>{% block title %}{% endblock title %}</title>
   <link rel="stylesheet" href="{% static 'assets/css/reset.css' %}">
   <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+  <script src="{% static 'vendor/jquery-3.6.3.js' %}"></script>
   {% block css %}{% endblock css %}
 </head>
 
