--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,16 +1,27 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
+{% block css %}
+  <link rel="stylesheet" href="{% static 'blog/assets/css/home.css' %}">
+{% endblock css %}
+
 {% block title %}Blog{% endblock title %}
 
 {% block content %}
-  <p><a href="{% url 'blog:post_create' %}">novo post</a><p>
-  <br>
   <section class="post-list">
-    {% for post in object_list %}
-      <div class="post-list-item">
-        <h1><a href="{% url 'blog:post_detail' post.pk %}">{{ post.title }}</a></h1>
-        <p>{{ post.abstract }}</p>
+    {% if request.user.is_authenticated %}
+      <div class="post-list-new-post">
+        <a href="{% url 'blog:post_create' %}">novo post</a>
       </div>
+    {% endif %}
+    {% for post in object_list %}
+      <article class="post-list-item">
+        <a href="{% url 'blog:post_detail' post.pk %}">
+          <h1 class="post-list-item-title">{{ post.title }}</h1>
+          <p>{{ post.abstract }}</p>
+        </a>
+      </article>
     {% endfor %}
   </section>
 {% endblock content %}
