--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -68,3 +68,36 @@
 .interacted {
   color: red;
 }
+
+.form {
+  display: grid;
+  justify-content: center;
+  gap: 20px;
+}
+
+.field {
+  width: 400px;
+  display: grid;
+  gap: 5px;
+}
+
+.input {
+  font-size: large;
+  font-family: inherit;
+  padding: 10px;
+}
+
+.btn {
+  padding: 10px;
+  font-size: inherit;
+}
+
+.errorlist {
+  color: red;
+}
+
+.content-title {
+  text-align: center;
+  font-size: 30px;
+  margin: 40px;
+}
