--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -11,7 +11,7 @@
 {% block content %}
   <section class="post-list">
     {% if request.user.is_authenticated %}
-      <div class="post-list-new-post">
+      <div class="links-align-left">
         <a href="{% url 'blog:post_create' %}">novo post</a>
       </div>
     {% endif %}
