--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -101,3 +101,19 @@
   font-size: 30px;
   margin: 40px;
 }
+
+.links-align-left {
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+}
+
+.links-align-left a {
+  color: var(--light-font-color);
+  text-decoration: none;
+  transition: all 200ms;
+}
+
+.links-align-left a:hover {
+  transform: scale(1.1);
+}
