adicionar _blank em link

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
   </div>
   <div class="dark-bg">
     <footer class="layout site-footer">
-      <p>Desenvolvido por <a href="https://github.com/vitormcferreira">@vitormcferreira</a></p>
+      <p>Desenvolvido por <a href="https://github.com/vitormcferreira" target="_blank">@vitormcferreira</a></p>
     </footer>
   </div>
 
