--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -2,6 +2,8 @@
 
 {% load widget_tweaks %}
 
+{% block title %}Login{% endblock title %}
+
 {% block content %}
   <h1 class="content-title">Login</h1>
   
