--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -2,6 +2,8 @@
 
 {% load widget_tweaks %}
 
+{% block title %}Cadastrar{% endblock title %}
+
 {% block content %}
   <h1 class="content-title">Cadastrar</h1>
 
