--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Apagar post{% endblock title %}
+
 {% block content %}
   <form method="POST" class="form">
     {% csrf_token %}
