--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -117,3 +117,44 @@
 .links-align-left a:hover {
   transform: scale(1.1);
 }
+
+.list-item {
+  margin: 10px 0;
+  text-decoration: none;
+  padding: 10px;
+  transition: all 400ms;
+}
+
+.list-item a {
+  display: block;
+  text-decoration: none;
+  color: var(--light-font-color);
+}
+
+.list-item:hover {
+  border-radius: 10px;
+  background-color: rgb(54, 56, 141, 0.1);
+}
+
+.list-item-title {
+  font-size: 30px;
+  margin-bottom: 10px;
+  width: fit-content;
+  position: relative;
+}
+
+.list-item-title:after {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background-color: var(--light-font-color);
+  transition: all 400ms ease-in;
+}
+
+.list-item:hover .list-item-title:after {
+  content: '';
+  width: 100%;
+  height: 2px;
+}
