--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
         <ul>
           <li><a href="{% url 'blog:home' %}">home</a></li>
           {% if request.user.is_authenticated %}
+            <li><a href="{% url 'blog:dashboard' %}">dashboard</a></li>
             <li><a href="{% url 'accounts:logout' %}">logout</a></li>
           {% else %}
             <li><a href="{% url 'accounts:login' %}">login</a></li>
